--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud.jpg" alt="cloud-img">
       <div class="ysa">
           <h1>I'm Ysa</h1>
       </div>
         <div class="intro">
       <h2>a <span><u>Call Center Team Leader</u></span> and aspiring <span><u>Web Developer</u></span></h2>
     </div>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="images/cloud.jpg" alt="cloud-img">
+      <img src="images/mountain.jpg" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/PNG Image.png" alt="ID-img" width="200px" height="200px">
+        <img src="images/PNG Image.jpg" alt="ID-img" width="200px" height="200px">
         <h2>Mabuhay!</h2>
         <p class="intro">I am a call center Team Leader based in the Philippines. I want to have a totally different version of me when I am off-work, that is why I created a bucket list of what I want to be an expert of:
           <p></p>
@@ -35,12 +35,12 @@
       <div class="skills">
         <h2>My Current Skills</h2>
         <div class="skill-row">
-            <img class= "ms" src="images/microsoft-office.png" alt="image-skills">
+            <img class= "ms" src="images/microsoft-office.jpg" alt="image-skills">
             <h3 class="ms-description">Micosoft Office</h3>
             <h4 class="ms-description">I am an expert in Microsof Office especially Excel and Powerpoint, which I mainly use for reports and business reviews with our client.</h4>
             </div>
             <div class="skill-row">
-            <img class="html" src="images/html.png" alt="html-img">
+            <img class="html" src="images/html.jpg" alt="html-img">
               <h3 class="html-description">HTML</h3>
               <h4 class="html-description">As a part of my bucket list, I have been self-studying Web Developing, and I can say that I am now in advanced level in HTML.</h4>
           </div>
