--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="skills">
         <h2>My Current Skills</h2>
         <div class="skill-row">
-            <img class= "ms" src="Images/microsoft-office.jpg" alt="image-skills">
+            <img class= "ms" src="Images/microsoft-office.png" alt="image-skills">
             <h3 class="ms-description">Micosoft Office</h3>
             <h4 class="ms-description">I am an expert in Microsof Office especially Excel and Powerpoint, which I mainly use for reports and business reviews with our client.</h4>
             </div>
