--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.jpg" alt="cloud-img">
+      <img class="top-cloud" src="Images/cloud.jpg" alt="cloud-img">
       <div class="ysa">
           <h1>I'm Ysa</h1>
       </div>
