--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="intro">
       <h2>a <span><u>Call Center Team Leader</u></span> and aspiring <span><u>Web Developer</u></span></h2>
     </div>
-      <img class="bottom-cloud" src="images/cloud.jpg" alt="cloud-img">
+      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
       <img src="images/mountain.jpg" alt="mountain-img">
     </div>
     <div class="middle-container">
