--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="mywebsite/Images/cloud.jpg" alt="cloud-img">
+      <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
       <div class="ysa">
           <h1>I'm Ysa</h1>
       </div>
@@ -17,7 +17,7 @@
       <h2>a <span><u>Call Center Team Leader</u></span> and aspiring <span><u>Web Developer</u></span></h2>
     </div>
       <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.jpg" alt="mountain-img">
+      <img src="Images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
@@ -40,7 +40,7 @@
             <h4 class="ms-description">I am an expert in Microsof Office especially Excel and Powerpoint, which I mainly use for reports and business reviews with our client.</h4>
             </div>
             <div class="skill-row">
-            <img class="html" src="images/html.jpg" alt="html-img">
+            <img class="html" src="Images/html.png" alt="html-img">
               <h3 class="html-description">HTML</h3>
               <h4 class="html-description">As a part of my bucket list, I have been self-studying Web Developing, and I can say that I am now in advanced level in HTML.</h4>
           </div>
