--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="PNG Image.jpg" alt="ID-img" width="200px" height="200px">
+        <img src="Images/PNG Image.png" alt="ID-img" width="200px" height="200px">
         <h2>Mabuhay!</h2>
         <p class="intro">I am a call center Team Leader based in the Philippines. I want to have a totally different version of me when I am off-work, that is why I created a bucket list of what I want to be an expert of:
           <p></p>
